<resources>
    <string name="app_name">ForumApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xross_talk">Xross Talk</string>
    <string name="register">Register</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="how_should_everyone_call_you">How should everyone call you ?</string>
    <string name="back_button">Back_Button</string>
    <string name="password">Password</string>
    <string name="you_can_always_change_this_later">You can always change this later</string>
    <string name="select_your_tag">Select your tag:</string>
    <string name="how">How?</string>
    <string name="helper">HELPER</string>
    <string name="reformer">REFORMER</string>
    <string name="loyalist">LOYALIST</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="we_re_so_exicted_to_see_you_again">We’re so exicted to see you again!</string>
    <string name="login">LOGIN</string>
    <string name="next">NEXT</string>
    <string name="type">Type...</string>
    <string name="verify">Verification</string>
    <string name="emailentry">Enter Email</string>
    <string name="emails">Email.....</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="xrosstalk">Xrosstalk</string>
    <string name="type_a_message">Type a Message....</string>
    <string name="send">SEND</string>
    <string name="mahesha">Mahesha</string>
    <string name="happy">HAPPY</string>
    <string name="romantic">ROMANTIC</string>
    <string name="broken">BROKEN</string>
    <string name="excited">EXCITED</string>
    <string name="high">HIGH</string>
    <string name="sad">SAD</string>
    <string name="attached">ATTACHED</string>
    <string name="confused">CONFUSED</string>
    <string name="angry">ANGRY</string>
    <string name="normal">NORMAL</string>
    <string name="block">Block</string>
    <string name="delete_chat">Delete Chat</string>


    <string name="enter_your_email">Enter your email</string>
    <string name="enter_email">Enter email</string>
    <string name="your_email_address">Your email address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verification">Verification</string>
    <string name="signup">Register</string>

    <string name="welcome_to_xrosstalk">Welcome to Xrosstalk</string>
    <string name="app_name_caps">XROSSTALK</string>
    <string name="password_recovery">Password Recovery</string>


    <string name="leader">Leader</string>
    <string name="peace_maker">Peace Maker</string>
    <string name="challenger">Challenger</string>
    <string name="enthusiast">Enthusiast</string>
    <string name="investigator">Investigator</string>
    <string name="individualist">Individualist</string>
</resources>